--- a/src/index.css
+++ b/src/index.css
@@ -39,3 +39,19 @@ a {
 .w-full {
   width: 100%;
 }
+
+.marker-cluster-small {
+  background-color: rgba(53, 123, 252, 0.6);
+}
+
+.marker-cluster-medium {
+  background-color: rgba(53, 123, 252, 0.6);
+}
+
+.marker-cluster-large {
+  background-color: rgba(53, 123, 252, 0.6);
+}
+
+.marker-cluster div {
+  background-color: #2c6ed6;
+}
