--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -7,6 +7,10 @@
   border: none;
   max-height: 32px;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
   transition:
     background-color 0.3s ease,
     color 0.3s ease;
