--- a/src/components/Button/index.css
+++ b/src/components/Button/index.css
@@ -1,9 +1,9 @@
 .button {
-  background-color: #f5f5f6;
-  color: #747880;
-  border-radius: 8px;
+  background-color: var(--button-background-color);
+  color: var(--button-text-color);
+  border-radius: var(--border-radius-button);
   padding: 8px 12px;
-  font-size: 14px;
+  font-size: var(--font-size-text);
   border: none;
   max-height: 32px;
   cursor: pointer;
@@ -11,31 +11,24 @@
   align-items: center;
   justify-content: center;
   gap: 6px;
-  transition:
-    background-color 0.3s ease,
-    color 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.button__block {
+  width: 100%;
 }
 
 .button:hover {
-  background-color: #e0e0e0;
-  color: #5a5e69;
+  background-color: var(--button-background-hover-color);
+  color: var(--button-text-hover-color);
 }
 
 .button__active {
-  background-color: #357bfc;
-  color: #ffffff;
-  border-radius: 8px;
-  padding: 8px 12px;
-  font-size: 14px;
-  max-height: 32px;
-  border: none;
-  cursor: pointer;
-  transition:
-    background-color 0.3s ease,
-    color 0.3s ease;
+  background-color: var(--primary-color);
+  color: var(--white-color);
 }
 
 .button__active:hover {
-  background-color: #2c6fe6;
-  color: #ffffff;
+  background-color: var(--button-background-active-hover-color);
+  color: var(--white-color);
 }
