--- a/src/components/DropdownMenu/index.css
+++ b/src/components/DropdownMenu/index.css
@@ -1,7 +1,8 @@
 .dropdown-menu {
-  background-color: #ffffff;
+  background-color: var(--white-color);
+  border-radius: var(--border-radius);
+  box-shadow: 0px 4px 6px 0px var(--box-shadow);
   margin-top: 8px;
-  border-radius: 10px;
   overflow-y: auto;
   position: absolute;
   width: 100%;
@@ -9,7 +10,6 @@
   left: 20px;
   top: 80px;
   z-index: 500;
-  box-shadow: 0px 4px 6px 0px #0000001a;
   height: 540px;
   max-height: 50%;
   scrollbar-width: none;
