--- a/src/components/MapViewToggle/index.css
+++ b/src/components/MapViewToggle/index.css
@@ -2,32 +2,31 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  gap: 16px;
-  padding: 8px;
-  background: #ffffff;
+  gap: 7px;
+  padding: 0px 7px;
+  background: var(--white-color);
   position: absolute;
   right: 20px;
   top: 20px;
   z-index: 500;
-  border-radius: 6px;
+  border-radius: var(--border-radius-button);
+  box-shadow: 0px 4px 6px 0px var(--box-shadow);
 }
 
 .map-view-toggle-item {
-  font-size: 13px;
-  color: #83878d;
+  font-size: var(--font-size-text);
+  color: var(--text-secondary-color);
   font-weight: 400px;
   cursor: pointer;
-  transition:
-    color 0.3s ease,
-    transform 0.2s ease;
+  transition: all 0.3s ease;
 }
 
 .map-view-toggle-item:hover {
-  color: #3a3a3f;
+  color: var(--text-information-color);
 }
 
 .map-view-toggle-item__active {
-  color: #3a3a3f;
+  color: var(--text-information-color);
   font-weight: 500px;
 }
 
