--- a/src/components/NotFound/index.css
+++ b/src/components/NotFound/index.css
@@ -4,7 +4,7 @@
   align-items: center;
   flex-direction: column;
   gap: 6px;
-  color: #acafb4;
+  color: var(--text-secondary-color);
   height: 100%;
 }
 
