--- a/src/components/Search/index.css
+++ b/src/components/Search/index.css
@@ -1,20 +1,20 @@
 .search {
   display: flex;
-  border: 1px solid #e5e6e8;
-  border-radius: 10px;
+  border: 1px solid var(--border-color);
+  border-radius: var(--border-radius);
   gap: 4px;
   padding: 8px;
   transition: border-color 0.3s ease;
 }
 
 .search-focused {
-  border-color: #357bfc;
+  border-color: var(--primary-color);
 }
 
 .search-input {
   width: 100%;
   border: none;
-  color: #3a3a3f;
+  color: var(--text-information-color);
 }
 
 .search-input:focus-visible {
@@ -22,21 +22,20 @@
 }
 
 .search-icon {
-  color: #acafb4;
+  color: var(--text-secondary-color);
   transition: color 0.3s ease;
 }
 
 .search-icon-focused {
-  color: #357bfc;
+  color: var(--primary-color);
 }
 
 .search-close-icon {
-  color: #357bfc;
+  color: var(--primary-color);
   cursor: pointer;
   transition: opacity 0.3s ease;
 }
 
 .search-close-icon:hover {
-  transition: opacity 0.3s ease;
-  color: #1a5dbe;
+  color: var(--button-background-active-hover-color);
 }
