--- a/src/components/TabsBar/index.css
+++ b/src/components/TabsBar/index.css
@@ -3,9 +3,9 @@
   justify-content: center;
   align-items: center;
   gap: 8px;
-  background: #ffffff;
+  background: var(--white-color);
   padding: 8px;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   max-width: max-content;
   position: absolute;
   left: 20px;
@@ -13,6 +13,7 @@
   max-height: 70%;
   overflow: hidden;
   z-index: 10000;
+  box-shadow: 0px 4px 6px 0px var(--box-shadow);
 }
 
 @media (max-width: 600px) {
@@ -23,12 +24,11 @@
 
 .tabs-bar-mobile {
   display: flex;
-  justify-content: center;
   align-items: center;
   gap: 8px;
-  background: #ffffff;
+  background: var(--white-color);
   padding: 8px;
-  border-radius: 10px;
+  border-radius: var(--border-radius);
   position: absolute;
   left: 16px;
   top: 16px;
@@ -45,6 +45,7 @@
 
 .custom-dropdown {
   position: relative;
+  display: flex;
   width: 100%;
   z-index: 600;
 }
@@ -54,11 +55,11 @@
   top: calc(100% + 16px);
   left: 0;
   width: 100%;
-  background: #ffffff;
-  border-radius: 10px;
+  background: var(--white-color);
+  border-radius: var(--border-radius);
   padding: 8px;
   display: flex;
   flex-direction: column;
   gap: 8px;
-  box-shadow: 0px 4px 6px 0px #0000001a;
+  box-shadow: 0px 4px 6px 0px var(--box-shadow);
 }
