--- a/src/components/DropdownList/index.css
+++ b/src/components/DropdownList/index.css
@@ -33,6 +33,14 @@
   text-wrap: wrap;
 }
 
+.dropdown-list-item-address-container {
+  display: flex;
+  gap: 4px;
+  align: center;
+  justify: center;
+  font-size: 16px;
+}
+
 .dropdown-list-item-address {
   font-size: var(--font-size-text);
   color: var(--text-secondary-color);
